<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/main_layout_padding"
    android:background="@color/white"
    tools:context="compindia.task0510.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account" />

    <TextView
        android:id="@+id/txt_info_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        android:textSize="@dimen/name_txt_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_account_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/view_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txt_margin"
            android:text="@string/email"
            android:textSize="@dimen/btn_txt_size" />

        <TextView
            android:id="@+id/info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txt_margin"
            android:text="@string/example_email_com"
            android:textSize="@dimen/btn_txt_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/view_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txt_margin"
            android:text="@string/mobile"
            android:textSize="@dimen/btn_txt_size" />

        <TextView
            android:id="@+id/inf0_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txt_margin"
            android:text="dummytext"
            android:textSize="@dimen/btn_txt_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/layout_padding"/>

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_botom"
        android:background="@drawable/button_shape"
        android:text="@string/delete_my_account"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>
