<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/layout_padding"
    tools:context="compindia.task0510.RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_here"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/top_txt_size"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_botom"
        android:text="@string/all_fields_are_mandatory"
        android:textColor="@color/colorPrimary"
        android:typeface="serif" />

    <EditText
        android:id="@+id/edtxt_username_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_botom"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/your_name"
        android:textColorHint="@color/hint_color"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:paddingEnd="@dimen/et_padding"
        android:paddingStart="@dimen/et_padding" />

    <EditText
        android:id="@+id/edtxt_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_padding"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/your_email"
        android:textColorHint="@color/hint_color"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:paddingEnd="@dimen/et_padding"
        android:paddingStart="@dimen/et_padding" />

    <EditText
        android:id="@+id/edtxt_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_padding"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/mobile_number"
        android:textColorHint="@color/hint_color"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingEnd="@dimen/et_padding"
        android:paddingStart="@dimen/et_padding" />

    <EditText
        android:id="@+id/edtxt_usepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_padding"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        android:maxLength="10"
        android:paddingEnd="@dimen/et_padding"
        android:paddingStart="@dimen/et_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/name_txt_size"
        android:textSize="@dimen/sall_txt"
        android:text="@string/terms"

        />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@drawable/button_shape"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/btn_txt_size" />

</LinearLayout>
